# artifacts/api-server/src/lib/auth.ts
@@ -1,0 +1,19 @@
+import crypto from "crypto";
+import { promisify } from "util";
+
+const scrypt = promisify(crypto.scrypt);
+
+export async function hashPassword(password: string): Promise<string> {
+  const salt = crypto.randomBytes(16).toString("hex");
+  const derivedKey = (await scrypt(password, salt, 64)) as Buffer;
+  return `${salt}:${derivedKey.toString("hex")}`;
+}
+
+export async function verifyPassword(
+  password: string,
+  hash: string
+): Promise<boolean> {
+  const [salt, key] = hash.split(":");
+  const derivedKey = (await scrypt(password, salt, 64)) as Buffer;
+  return key === derivedKey.toString("hex");
+}
